# DeltaQOscilloscope

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cache.py  compile_commands.json  componentsDict.py  main.py  makefile  parsed_system.json  results.csv  sample.erl  system.dq  system.json  system.py  test.json  test.py
cmake/: AddFFTW.cmake  AddJson.cmake  AddPybind.cmake  CPM.cmake
diagram/: ObservationPoint.py  ProbabilisticOperator.py  SequentialOperator.py  component.py  probabilistic.py  sequential.py
docs/: Doxyfile
docs/docs/html/: Application_8h_source.html  ColorRegistry_8h_source.html  ConfidenceInterval_8h_source.html  CustomLegendEntry_8h_source.html  CustomLegendPanel_8h_source.html  DQGrammarBaseVisitor_8h_source.html  DQGrammarLexer_8h_source.html  DQGrammarParser_8h_source.html  DQGrammarVisitor_8h_source.html  DQPlotController_8h_source.html  DQPlotList_8h_source.html  DelaySettingsWidget_8h_source.html  DeltaQOperations_8h_source.html  DeltaQPlot_8h_source.html  DeltaQRepr_8h_source.html  DeltaQ_8h_source.html  MainWindow_8h_source.html  NewPlotList_8h_source.html  ObservableSettings_8h_source.html  Observable_8h_source.html  OperatorType_8h_source.html  Operator_8h_source.html  Outcome_8h_source.html  Probe_8h_source.html  QTAInputWidget_8h_source.html  QTA_8h_source.html  Sample_8h_source.html  SamplingRateWidget_8h_source.html  Server_8h_source.html  Sidebar_8h_source.html  SnapshotViewerWindow_8h_source.html  Snapshot_8h_source.html  StubControlWidget_8h_source.html  SystemBuilder_8h_source.html  SystemCreationWidget_8h_source.html  SystemErrorListener_8h_source.html  SystemParserInterface_8h_source.html  SystemUtils_8h_source.html  System_8h_source.html  TriggerManager_8h_source.html  (+182 more)
docs/docs/latex/: Application_8h_source.tex  ColorRegistry_8h_source.tex  ConfidenceInterval_8h_source.tex  CustomLegendEntry_8h_source.tex  CustomLegendPanel_8h_source.tex  DQPlotController_8h_source.tex  DQPlotList_8h_source.tex  DelaySettingsWidget_8h_source.tex  DeltaQOperations_8h_source.tex  DeltaQPlot_8h_source.tex  DeltaQRepr_8h_source.tex  DeltaQ_8h_source.tex  MainWindow_8h_source.tex  NewPlotList_8h_source.tex  ObservableSettings_8h_source.tex  Observable_8h_source.tex  OperatorType_8h_source.tex  Operator_8h_source.tex  Outcome_8h_source.tex  Probe_8h_source.tex  QTAInputWidget_8h_source.tex  QTA_8h_source.tex  Sample_8h_source.tex  SamplingRateWidget_8h_source.tex  Server_8h_source.tex  Sidebar_8h_source.tex  SnapshotViewerWindow_8h_source.tex  Snapshot_8h_source.tex  StubControlWidget_8h_source.tex  SystemBuilder_8h_source.tex  SystemCreationWidget_8h_source.tex  (+74 more)
dqsd_sample/: README.md  rebar.config
dqsd_sample/config/: sys.config  vm.args
hooks/: pre-commit
otel_getting_started/: README.md  rebar.config
otel_getting_started/config/: sys.config
plotter/: ObservationPoint.py  plot.py
src/: Application.cpp  Application.h  CMakeLists.txt  Makefile  main.cpp
src/c++/: System.cpp  System.h  main.cpp
src/c++/diagram/: AllToFinish.cpp  AllToFinish.h  DiagramComponent.cpp  DiagramComponent.h  Event.cpp  Event.h  EventSample.cpp  EventSample.h  FirstToFinish.cpp  FirstToFinish.h  Outcome.cpp  Outcome.h  ProbabilisticOperator.cpp  ProbabilisticOperator.h
src/c++/exceptions/: ComponentAlreadyExists.cpp
src/c++/maths/: DeltaQ.cpp  DeltaQ.h  DeltaQOperations.cpp  DeltaQOperations.h  EmpiricalCDF.cpp
src/dashboard/: AddPlotDialog.cpp  AddPlotDialog.h  Application.h  CMakeLists.txt  ColorRegistry.cpp  ColorRegistry.h  ComponentEditDialog.cpp  ComponentEditDialog.h  CustomLegendEntry.cpp  CustomLegendEntry.h  CustomLegendPanel.cpp  CustomLegendPanel.h  DQPlotController.cpp  DQPlotController.h  DQPlotList.cpp  DQPlotList.h  Dashboard.cpp  Dashboard.h  DelaySettingsWidget.cpp  DelaySettingsWidget.h  DeltaQHelpers.cpp  DeltaQHelpers.h  DeltaQPlot.cpp  DeltaQPlot.h  JsonComponent.cpp  JsonComponent.h  MainWindow.cpp  MainWindow.h  Makefile  NewPlotList.cpp  NewPlotList.h  ObservableSettings.cpp  ObservableSettings.h  Plot.cpp  Plot.h  Point.h  PollingRateWidget.cpp  PollingRateWidget.h  QTAInputWidget.cpp  QTAInputWidget.h  (+13 more)
src/dashboard/controller/: DQPlotController.h
src/diagram/: AllToFinish.cpp  AllToFinish.h  CMakeLists.txt  DiagramComponent.cpp  DiagramComponent.h  Event.cpp  Event.h  EventSample.cpp  EventSample.h  FirstToFinish.cpp  FirstToFinish.h  Makefile  Observable.cpp  Observable.h  Operator.cpp  Operator.h  OperatorType.h  Outcome.cpp  Outcome.h  Primitive.cpp  Primitive.h  ProbabilisticOperator.cpp  ProbabilisticOperator.h  Probe.cpp  Probe.h  Sample.h  System.cpp  System.h  SystemParser.cpp  SystemParser.h  SystemUtils.cpp  SystemUtils.h  data.json  main.cpp  parsed_system.json  system.json
src/diagram/.cmake/api/v1/reply/: cache-v2-3e7696aa92730f640225.json  cmakeFiles-v1-cee15747e56124b0354a.json  codemodel-v2-3d2f7f852ea81b987584.json  index-2025-04-27T13-31-01-0747.json  target-_diagram-e96f72c547f8d626bebe.json  target-diagram-2c76ad0242bbd2b61114.json
src/maths/: CMakeLists.txt  ConfidenceInterval.cpp  ConfidenceInterval.h  DeltaQ.cpp  DeltaQ.h  DeltaQOperations.cpp  DeltaQOperations.h  DeltaQRepr.h  Makefile  QTA.h  Snapshot.cpp  Snapshot.h  TriggerManager.cpp  TriggerManager.h  TriggerTypes.h  Triggers.cpp  Triggers.h
src/parser/: CMakeLists.txt  DQGrammar.g4  DQParser.cpp  DQParser.h  ParserWrapper.cpp  ParserWrapper.h  SystemBuilder.cpp  SystemBuilder.h  SystemErrorListener.h  SystemParserInterface.cpp  SystemParserInterface.h  example.dq  main.cpp  parser.py
src/python/: cache.py  main.py  requirements.txt
src/python/diagram/: DiagramComponent.py  DiagramCreator.py  ObservationPoint.py  ProbabilisticOperator.py
src/server/: CMakeLists.txt  ErlangSender.cpp  ErlangSender.h  Makefile  Server.cpp  Server.cppaa  Server.h  Server.haa  SpansReader.cpp  SpansReader.h  main.cpp
src/tracer/: my_tracer.beam  sample.beam  sample.erl  sample2.beam  sample2.erl  tracer.beam  tracer.erl
tests/: CMakeLists.txt
tests/parser/: CMakeLists.txt  TestSystemBuilder.cpp
utils/: EmpiricalCDF.py  math_utils.py
(+63 files in other folders)
